; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/pgtypeslib/extr_timestamp.c_PGTYPEStimestamp_fmt_asc.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/pgtypeslib/extr_timestamp.c_PGTYPEStimestamp_fmt_asc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PGTYPEStimestamp_fmt_asc(i32* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.tm, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @PGTYPESdate_from_timestamp(i32 %14)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = call i32 @PGTYPESdate_dayofweek(i32 %16)
  store i32 %17, i32* %12, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @timestamp2tm(i32 %19, i32* null, %struct.tm* %9, i32* %10, i32* null)
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %11, align 4
  %23 = load i32, i32* %12, align 4
  %24 = load i8*, i8** %6, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @dttofmtasc_replace(i32* %21, i32 %22, i32 %23, %struct.tm* %9, i8* %24, i32* %7, i8* %25)
  ret i32 %26
}

declare dso_local i32 @PGTYPESdate_from_timestamp(i32) #1

declare dso_local i32 @PGTYPESdate_dayofweek(i32) #1

declare dso_local i32 @timestamp2tm(i32, i32*, %struct.tm*, i32*, i32*) #1

declare dso_local i32 @dttofmtasc_replace(i32*, i32, i32, %struct.tm*, i8*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
